monitoring/prometheus-stack/grafana-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: prometheus-stack
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - grafana.mcmn.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: kube-prometheus-stack-grafana
          port: 80
          weight: 1
--- #External DNS specific for exposing argo to CF tunnel. external-dns does not support annotating gateway API + HTTP Route
apiVersion: externaldns.k8s.io/v1alpha1
kind: DNSEndpoint
metadata:
  name: grafana-tunnel
  namespace: prometheus-stack
  labels:
    external-dns: "true"
spec:
  endpoints:
    - dnsName: grafana.mcmn.me
      recordType: CNAME
      targets:
        - 37ab5ca6-9491-4bc3-9505-75be85d6e554.cfargotunnel.com
